--- a/css/media.css
+++ b/css/media.css
@@ -8,7 +8,7 @@
 
     /* ====== BASE ====== */
     html {
-        font-size: calc(9px + 5 * ((100vw - 320px) / (1440 - 320)));
+        font-size: calc(11px + 3 * ((100vw - 320px) / (1440 - 320)));
     }
 
     .container {
@@ -22,23 +22,22 @@
     
     h2 {
         font-size: calc(30px + 12 * ((100vw - 320px) / (1440 - 320)));
-        margin-bottom: 9px;
     }
     
     h3 {
-        font-size: calc(22px + 10 * ((100vw - 320px) / (1440 - 320)));
+        font-size: calc(23px + 9 * ((100vw - 320px) / (1440 - 320)));
     }
     
     h4 {
-        font-size: calc(20px + 8 * ((100vw - 320px) / (1440 - 320)));
+        font-size: calc(21px + 7 * ((100vw - 320px) / (1440 - 320)));
     }
     
     h5 {
-        font-size: calc(15px + 7 * ((100vw - 320px) / (1440 - 320)));
+        font-size: calc(16px + 6 * ((100vw - 320px) / (1440 - 320)));
     }
     
     h6 {
-        font-size: calc(9px + 4 * ((100vw - 320px) / (1440 - 320)));
+        font-size: calc(11px + 2 * ((100vw - 320px) / (1440 - 320)));
     }
 
     header .banner .info p {
@@ -100,8 +99,8 @@
     }
 
     .best .item img {
-        width: 258px;
-        height: 214px;
+        width: auto;
+        height: 215px;
         max-width: 100%;
     }
 
@@ -112,6 +111,14 @@
 @media screen and (max-width: 992px) {
 
     /* ====== BASE ====== */
+    h2 {
+        margin-bottom: 6px;
+    }
+
+    .expl-btn {
+        padding: 12px 48px;
+    }
+    
     header .links > *:not(:last-child) {
         margin-right: 13px;
     }
@@ -140,6 +147,10 @@
         padding: 0 25px;
     }
 
+    .categories .tabs .vert .tab:nth-child(even) .tab__desc {
+        margin-top: 15px;
+    }
+
     .popular .items {
         justify-content: space-around;
         flex-wrap: wrap;
@@ -150,13 +161,43 @@
         max-width: 300px;
     }
 
+    .popular .item img{
+        height: 215px;
+    }
+
     .best .item h4 {
         margin-bottom: 15px;
     }
 
     .best .item button {
-        padding: 10px 29px;
+        padding: 10px 25px;
         margin-top: auto;
+    }
+
+    .best .item img {
+        height: 145px;
+    }
+
+    .search .search__bar {
+        padding: 12px 14px 13px;
+    }
+
+    .search .search__bar button {
+        width: 26px;
+        height: 25px;
+    }
+
+    .search .search__bar input {
+        margin-left: 15px;
+    }
+
+    .mail .banner .bar {
+        width: 370px;
+        height: 42px;
+    }
+
+    .mail .banner .bar button {
+        padding: 0 20px;
     }
 
     footer nav {
@@ -186,6 +227,28 @@
     header .links {
         display: none;
     }
+
+    .categories .tabs {
+        flex-direction: column;
+    }
+
+    .categories .tabs .hor,  .categories .tabs .vert{
+        width: auto;
+        margin: 0;
+    }
+
+    .categories .tabs .vert{
+        width: auto;
+        margin-top: 16px;
+    }
+
+    .categories .tabs .hor .tab:not(:first-child) {
+        margin-top: 16px;
+    }
+
+    .best .item button {
+        margin-bottom: 10px;
+    }
 }
 
 
@@ -194,4 +257,74 @@
     
     /* ====== BASE ====== */
 
+    .popular .popular__desc {
+        margin-bottom: 20px;
+    }
+
+    .popular .item {
+        width: 85%;
+        max-width: initial;
+    }
+
+    .best .best__desc {
+        margin-bottom: 20px;
+    }
+
+    .best .items {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .best .item {
+        width: 85%;
+        max-width: initial;
+    }
+
+    .best .item:not(:first-child) {
+        margin-top: 15px;
+    }
+
+    .ideas .info {
+        flex-direction: column;
+        margin: 16px auto;
+    }
+
+    .ideas .info img {
+        width: 100%;
+    }
+
+    .ideas .info .text p {
+        font-size: 1.4rem;
+    }
+
+    .mail .banner .bar {
+        width: auto;
+    }
+
+    footer nav {
+        gap: 20px;
+    }
+
+    footer nav .list {
+        width: 45%;
+    }
+
+    footer nav .list h5 {
+        margin-bottom: 12px;
+    }
+
+    footer nav .list li:not(:first-child) {
+        margin-top: 8px;
+    }
+
+    footer .credentials > *{
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+    footer .credentials div a:after {
+        width: 13px;
+        height: 13px;
+    }
 }
