--- a/css/style.css
+++ b/css/style.css
@@ -88,10 +88,11 @@ button {
 
 .expl-btn {
     padding: 14px 53px;
-    font-size: 18px;
+    font-size: 1.285rem;
     border-radius: 200px;
     border: 1px solid #000;
     background-color: transparent;
+    color: #000;
 }
 
 .expl-btn:hover {
@@ -127,6 +128,9 @@ header .links > *:not(:last-child) {
 header .links li::after {
     content: " ";
     background-image: url(../img/arrow-hover.svg);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
     display: block;
     width: 12px;
     height: 8px;
@@ -238,7 +242,7 @@ header .image {
 }
 
 .categories .tab__desc {
-    font-size: 15px;
+    font-size: 1.07rem;
 }
 
 .categories .tabs .hor {
@@ -486,6 +490,9 @@ header .image {
     height: 26px;
     margin-left: 2px;
     background-image: url(../img/link.svg);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 /* SEARCH Section */
@@ -505,9 +512,6 @@ header .image {
     padding: 15px 17px 16px;
     max-width: 650px;
     margin: 23px auto 16px;
-}
-
-.search .search__bar form {
     display: flex;
     align-items: center;
 }
@@ -526,8 +530,7 @@ header .image {
 .search .search__bar input {
     margin-left: 20px;
     width: 100%;
-    font-size: 14px;
-    line-height: 17px;
+    font-size: 1rem;
     font-family: inherit;
     background-color: transparent;
     outline: none;
@@ -548,6 +551,8 @@ header .image {
     background: transparent;
     border: 1px solid #C5C5C5;
     border-radius: 200px;
+    font-size: 1rem;
+    color: #000;
 }
 
 .search .search_suggestions button:hover {
@@ -604,6 +609,7 @@ header .image {
     font-family: inherit;
     outline: none;
     border: none;
+    font-size: 1rem;
 }
 
 .mail .banner .bar button{
@@ -614,6 +620,7 @@ header .image {
     max-height: 100%;
     outline: none;
     border: none;
+    font-size: 1rem;
 }
 
 .mail .banner .bar button:hover{
@@ -678,6 +685,7 @@ footer .credentials div {
 
 footer .credentials div span {
     font-family: 'Readex Pro', sans-serif;
+    white-space: nowrap;
 }
 
 footer .credentials div a {
@@ -691,4 +699,7 @@ footer .credentials div a:after {
     height: 18px;
     margin-left: 3px;
     background-image: url(../img/link-thin.svg);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
 }
