--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,9 @@ header .banner .banner__btn{
     height: 26px;
     top: calc(50% - 13px);
     background-color: transparent;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
     border: none;
 }
 
@@ -216,7 +219,7 @@ header .image {
 
 /* CATEGORIES Section */
 
-.categories .container {
+.categories {
     padding-top: 52px;
 }
 
@@ -275,6 +278,7 @@ header .image {
     flex-direction: column;
     justify-content: center;
     transition: top 0.6s ease;
+    width: 50%;
 }
 
 .categories .tabs .tab:nth-child(odd):hover {
@@ -340,7 +344,7 @@ header .image {
 
 /* POPULAR Section */
 
-.popular .container {
+.popular {
     padding-top: 103px;
 }
 
@@ -395,7 +399,7 @@ header .image {
 
 /* BEST Section */
 
-.best .container {
+.best {
     padding-top: 79px;
 }
 
@@ -438,8 +442,11 @@ header .image {
 
 /* IDEAS Section */
 
-.ideas .container {
+.ideas {
     padding-top: 79px;
+}
+
+.ideas .container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -497,7 +504,7 @@ header .image {
 
 /* SEARCH Section */
 
-.search .container {
+section.search {
     padding-top: 80px;
 }
 
@@ -561,7 +568,7 @@ header .image {
 
 /* MAIL Section */
 
-.mail .container {
+.mail {
     padding-top: 67px;
 }
 
